# RWA3

./: CMakeLists.txt  LICENSE  README.md  README.txt  package.xml
config/: my_sample.yaml  my_sample_sensors.yaml  sample.yaml
include/: competition.h
include/ariac_manager/: competition.h  custom_robot_control.h  order_manager.h  robot_controller.h  sensor.h
launch/: ariac_manager.launch  group2_rwa3.launch
src/: custom_robot_control.cpp  main.cpp  order_manager.cpp  robot_controller.cpp  sensor.cpp
